fix search query and token api for librarian
